sumo/tests/sumo/errors/too_many_teleports/errors.sumo
Warning: Teleporting vehicle 'always_right.1'; waited too long (wrong lane), lane='4o_0', time=1199.00.
Warning: Vehicle 'always_right.1' skips stop on lane '4o_0' time=1199.00.
Warning: Vehicle 'always_right.1' ends teleporting on edge '4fi', time 1199.00.
Warning: Teleporting vehicle 'always_right.101'; waited too long (jam), lane='1si_2', time=1612.00.
Warning: Vehicle 'always_right.101' ends teleporting on edge '4o', time 1612.00.
Warning: Teleporting vehicle 'always_right.102'; waited too long (yield), lane='1si_2', time=1966.00.
Warning: Teleporting vehicle 'always_right.3'; waited too long (wrong lane), lane='4o_0', time=2207.00.
Warning: Vehicle 'always_right.3' skips stop on lane '4o_0' time=2207.00.
Warning: Vehicle 'always_right.3' ends teleporting on edge '4fi', time 2207.00.
Warning: Vehicle 'always_right.102' ends teleporting on edge '4o', time 2209.00.
Warning: Teleporting vehicle 'always_right.103'; waited too long (yield), lane='1si_2', time=2326.00.
Warning: Vehicle 'always_right.103' ends teleporting on edge '4o', time 2326.00.
Warning: Teleporting vehicle 'always_right.104'; waited too long (yield), lane='1si_2', time=2686.00.
